force-app/main/default/objects/COM_FacilityBDX__c/COM_FacilityBDX__c.object-meta.xml
<CustomObject>
    <description>SOA (Statement of Account) Master Object</description>
    <label>Facility BDX</label>
    <nameField>
        <label>Facility BDX</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Facility BDX</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>