force-app/main/default/objects/COM_FacilityBDX__c/fields/Account_lk__c.field-meta.xml
<CustomField>
    <fullName>Account_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>(X)Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Facility BDX</relationshipLabel>
    <relationshipName>SOAByAccount</relationshipName>
    <type>Lookup</type>
</CustomField>