force-app/main/default/objects/COM_FacilityBDX__c/fields/BDXNo_fm__c.field-meta.xml
<CustomField>
    <fullName>BDXNo_fm__c</fullName>
    <formula>Facility_lk__r.ShortName__c &amp; &quot;-&quot; &amp; 
TEXT(Facility_lk__r.UY__c) &amp; &quot;-&quot; &amp; 
CASE(BDXType__c, 
    &quot;Debit Note&quot;, &quot;1&quot;, 
    &quot;SOA&quot;, &quot;2&quot;, 
    &quot;0&quot; 
) &amp; &quot;-&quot;&amp;
BDXPeriod__c &amp; &quot;-&quot; &amp; 
TEXT(Seq__c)</formula>
    <label>BDX No.</label>
    <type>Text</type>
</CustomField>