force-app/main/default/objects/COM_FacilityBDX__c/fields/BDXPeriod__c.field-meta.xml
<CustomField>
    <fullName>BDXPeriod__c</fullName>
    <label>BDX Period (Cycle)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>