force-app/main/default/objects/COM_FacilityBDX__c/fields/BDXType__c.field-meta.xml
<CustomField>
    <fullName>BDXType__c</fullName>
    <label>BDX Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Debit Note</fullName>
            </value>
            <value>
                <fullName>SOA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>