force-app/main/default/objects/COM_FacilityBDX__c/fields/FacilityUY_fm__c.field-meta.xml
<CustomField>
    <fullName>FacilityUY_fm__c</fullName>
    <formula>TEXT(Facility_lk__r.UY__c)</formula>
    <label>Facility UY</label>
    <type>Text</type>
</CustomField>