force-app/main/default/objects/COM_FacilityBDX__c/fields/IssueFrom__c.field-meta.xml
<CustomField>
    <fullName>IssueFrom__c</fullName>
    <label>BDX Period (From)</label>
    <type>Date</type>
</CustomField>