force-app/main/default/objects/COM_FacilityBDX__c/fields/IssueTo__c.field-meta.xml
<CustomField>
    <fullName>IssueTo__c</fullName>
    <label>BDX Period (To)</label>
    <type>Date</type>
</CustomField>