force-app/main/default/objects/COM_FacilityBDX__c/fields/LineItemCnt_rs__c.field-meta.xml
<CustomField>
    <fullName>LineItemCnt_rs__c</fullName>
    <label>Line Item Cnt</label>
    <summaryForeignKey>COM_FacilityBDXLineItem__c.FacilityBDX_md__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>