force-app/main/default/objects/COM_FacilityBDX__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BDXType__c</columns>
    <columns>Facility_lk__c</columns>
    <columns>FacilityParticipant_lk__c</columns>
    <columns>BDXPeriod__c</columns>
    <columns>IssueFrom__c</columns>
    <columns>IssueTo__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>